[1.4.0] - Fix UnsupportedOperationException while synchronization