@@ -4,11 +4,11 @@ import com.igorgorbunov3333.timer.model.dto.pomodoro.PomodoroDataDto;
 import com.igorgorbunov3333.timer.model.dto.tag.PomodoroTagDto;
 import com.igorgorbunov3333.timer.model.entity.PomodoroTag;
 import com.igorgorbunov3333.timer.model.entity.enums.SynchronizationResult;
-import com.igorgorbunov3333.timer.service.pomodoro.RemotePomodoroDataService;
 import com.igorgorbunov3333.timer.service.pomodoro.PomodoroService;
-import com.igorgorbunov3333.timer.service.synchronization.info.SynchronizationInfoService;
+import com.igorgorbunov3333.timer.service.pomodoro.RemotePomodoroDataService;
 import com.igorgorbunov3333.timer.service.synchronization.Synchronizer;
 import com.igorgorbunov3333.timer.service.synchronization.enums.SynchronizationPriorityType;
+import com.igorgorbunov3333.timer.service.synchronization.info.SynchronizationInfoService;
 import com.igorgorbunov3333.timer.service.tag.TagService;
 import lombok.AllArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
@@ -16,6 +16,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -60,7 +61,7 @@ public class RemotePrioritySynchronizer implements Synchronizer {
 
     private List<PomodoroTag> saveTags(List<PomodoroTagDto> tags) {
         if (CollectionUtils.isEmpty(tags)) {
-            return List.of();
+            return Collections.emptyList();
         }
         return tagService.save(tags);
     }
